--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>net.mikej.objectstore</groupId>
       <artifactId>mongodb-object-store</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3-SNAPSHOT-1</version>
       <classifier>mule-plugin</classifier>
     </dependency>
     <dependency>
